Bug 351895 - The files changed in Review perspective are closed after "Save All" them
Summary: The files changed in Review perspective are closed after "Save All" them
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: patchreview (other bugs)
Version First Reported In: 1.7.1
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 350003 351179 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-28 12:30 UTC by Piotr Mierzwinski
Modified: 2015-10-24 13:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2015-08-28 12:30:02 UTC
In Review perspective KDevelop closes all files except "Overview" when I invoke "Save all". Of course before the files have been changed.

This is really annoying behaviour. I always review changed files before I commit them (using option "git -> Show differences") and sometimes I remind myself something and then changed one or more (being in Review perspective) files. When I finish then I invoke "Save All" and all files are closed :(. To be able continue review I need to open them again clicking every in "Patch review".


Reproducible: Always

Steps to Reproduce:
1. Start KDevelop with some project
   I'm working on this project: git://git.qtcmd.org/qtcmd2.git
  (Code perspective)
2. Open couple of files (let it be 5)
3. Change couple of files (let it be 3)
4. Invoke "git -> Show differences" for entire project (no matter how)
  (Review perspective is opening)
5 Change all 3 files
6. Invoke "Save All"

Actual Results:  
Closing all files except "Overview"

Expected Results:  
Don't closing opened files.

This is related with:
https://bugs.kde.org/show_bug.cgi?id=346893
https://bugs.kde.org/show_bug.cgi?id=350003
https://forum.kde.org/viewtopic.php?f=218&t=124585&sid=93cd4cbb645ee87b83e81202407ac579
Comment 1 Sven Brauch 2015-10-13 13:13:56 UTC
*** Bug 350003 has been marked as a duplicate of this bug. ***
Comment 2 Sven Brauch 2015-10-13 13:14:08 UTC
*** Bug 351179 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2015-10-23 23:59:16 UTC
Git commit 22ade7a08a11be4ecd9b5d2b0f9b5553493ffb3a by Aleix Pol.
Committed on 23/10/2015 at 23:54.
Pushed by apol into branch 'master'.

Don't close documents when saving

M  +3    -0    plugins/patchreview/patchreviewtoolview.cpp

http://commits.kde.org/kdevplatform/22ade7a08a11be4ecd9b5d2b0f9b5553493ffb3a
Comment 4 Aleix Pol 2015-10-24 00:03:58 UTC
Git commit ff4d056609b0e62b34b900e500ea32faf68727b6 by Aleix Pol.
Committed on 23/10/2015 at 23:59.
Pushed by apol into branch '5.0'.

Don't close documents when saving

M  +3    -0    plugins/patchreview/patchreviewtoolview.cpp

http://commits.kde.org/kdevplatform/ff4d056609b0e62b34b900e500ea32faf68727b6
Comment 5 Piotr Mierzwinski 2015-10-24 13:13:22 UTC
In this particular case it seems to work. I've tested with 2 files changed in moment of review and and I save them (using "Save all").  They didn't close. 

Unfortunately after pressing "Finish review" both have been closed after KDevelop is switching to "Code" perspective. The same is happen when I "Commit" being in "Review" perspective. I can report new bug or two if you want.