Don't close documents when saving

BUG: 351895